--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,25 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /* max-width: 1280px; */
+  margin: 0;
+  /* padding: 2rem; */
+  text-align: left;
+}
+
+.underlineText {
+  position: relative;
+}
+
+.underlineText::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 0;
+  height: 2px;
+  background: rgb(255, 255, 255);
+  transition: width 0.3s ease-in;
+}
+
+.underlineText-active::after {
+  width: 20%;
 }
